# tarrk

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  config.py  main.py  models.py  openrouter.py  orchestrator.py  persona.py
backend/tests/: test_api.py  test_config.py  test_openrouter.py  test_orchestrator.py  test_persona.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
