[project]
name = "llm-chat-backend"
version = "0.1.0"
description = "Backend for multi-LLM chat room"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
files = ["app", "tests"]
